# doc-bro

./: .claude_code_mcp_config.json  .gitignore  .verify-package.sh  CLAUDE.md  COMPREHENSIVE_REMEDIATION_PLAN.md  DEPENDENCIES.md  FEATURES_PENDING_IMPLEMENTATION.md  INSTALL_MCP.md  MCP_INSTALLATION_COMPLETE.md  PROGRESS_SESSION_1.md  README.md  SESSION_2025-09-30_EVENING.md  SESSION_4_SUMMARY.md  TASK_T003_SUMMARY.md  TESTING.md  TESTING_PLAN.md  TEST_REPORT.md  UV_COMPLIANCE.md  cleanup_report.md  constitution.md  docbro  docbro-env.sh  docker-compose.yml  fix_models.py  install_mcp_global.sh  migrate_projects.py  pyproject.toml  pytest.ini  run.sh  setup.sh  test_crawl_debug.py  test_direct_worker.py  test_mcp_client.py  test_queue.py  test_results_summary.txt  test_simple_crawl.py
.github/workflows/: release.yml
.sessions/: 2025-09-30-phase7-complete.md
.specify/memory/: constitution.md
config/: query_transformations.example.yaml
configs/: claude_desktop_config.json  mcp_client_config.json
deploy/: DEPLOY.md
docker/: docker-compose.yml
docker/qdrant/: raft_state.json
docker/redis/: dump.rdb
docs/: cli-usage.md  error-handling.md  error_handler.md  validation-checklist.md  wizards.md
examples/: error_handler_demo.py
mcp/: README.md  docbro-admin.json  docbro.json
md/: COMPREHENSIVE_REMEDIATION_PLAN.md  FINAL_VALIDATION_REPORT.md  FIXES_SUMMARY.md  ISSUE_MCP_PROTOCOL_IMPLEMENTATION.md  MCP_CONNECTION_GUIDE.md  PROGRESS_SESSION_2.md  README_MCP_FILES.md  SESSION_3_PROGRESS.md  TASKS_TEST_FIXES.md  connection_report.md  manual_test_m.md  mcp_client_example.py  mcp_config_examples.json  rag_implementation_report.md  rag_implementation_status.md  rag_report.md  test_mcp_connection.sh
scripts/: setup-ollama.sh  setup-redis.sh  validate-uv-compliance.sh
specs/001-local-doc-bro/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-spicing-commands-up/: tasks.md
src/: __init__.py  __main__.py  version.py
src/api/: main.py  projects.py  setup_endpoints.py
src/cli/: .!52680!uninstall.py  __init__.py  __main__.py  context.py  help_formatter.py  main.py  main_updated.py  post_install.py  service_commands.py  setup.py  setup_commands.py  system_check.py  system_commands.py  uninstall.py  uninstall_commands.py  wizard.py
src/core/: __init__.py  config.py  docker_utils.py  lib_logger.py
src/lib/: __init__.py  conditional_logging.py  config.py  exceptions.py  paths.py  utils.py  yaml_utils.py
src/models/: __init__.py  backup_manifest.py  basket.py  batch_operation.py  box.py  box_type.py  cli_context.py  command_context.py  compatibility_status.py  component_availability.py  component_status.py  configuration_state.py  crawl_report.py  crawl_session.py  decision_point.py  error_entry.py  flag_definition.py  installation.py  installation_profile.py  installation_state.py  mcp_configuration.py  migration_record.py  page.py  progress_tracker.py  project.py  project_status.py  query_result.py  removal_operation.py  retry_policy.py  schema_version.py  service_config.py  service_configuration.py  settings.py  setup_configuration.py  setup_session.py  setup_types.py  shelf.py  shelf_box.py  sqlite_vec_config.py  system_requirements.py  (+9 more)
src/services/: __init__.py  backup_service.py  batch_crawler.py  box_service.py  command_router.py  compatibility_checker.py  component_detection.py  component_health.py  config.py  config_service.py  context_cache.py  context_service.py  crawl_progress.py  crawler.py  database.py  database_migrator.py  debug_manager.py  decision_handler.py  detection.py  docker_compatibility.py  docker_manager.py  docker_service_manager.py  embeddings.py  error_handler.py  error_reporter.py  fill_service.py  flag_standardizer.py  installation_start.py  installation_status.py  installation_wizard.py  installation_wizard_service.py  mcp_configuration_service.py  mcp_detector.py  mcp_server.py  menu_ui_service.py  migration_service.py  ollama_manager.py  progress_reporter.py  progress_tracking_service.py  project_export_service.py  (+27 more)
tests/: conftest.py  test_scenarios.md  test_uv_compliance_integration.py  uv_compliance.py
tests/contract/: test_ascii_branding.py  test_box_command_enhanced.py  test_box_create.py  test_cli_batch_crawl.py  test_cli_commands_existing.py  test_cli_commands_setup.py  test_cli_config.py  test_cli_crawl.py  test_cli_crawl_update.py  test_cli_create_wizard.py  test_cli_delete.py  test_cli_export.py  test_cli_help.py  test_cli_import.py  test_cli_list.py  test_cli_query.py  test_cli_recrawl.py  test_cli_rename.py  test_cli_shelf_create.py  test_cli_shelf_list.py  test_cli_status.py  test_cli_system_check.py  test_command_aliases.py  test_command_context_model.py  test_compatibility_check_api.py  test_config_validation.py  test_configuration_state_model.py  test_critical_decisions.py  test_exit_codes.py  test_fill_command.py  test_fill_command_enhanced.py  test_flag_definition_model.py  test_global_settings_api.py  test_health_cli.py  test_health_exit_codes.py  test_health_flags.py  test_health_formats.py  test_installation_start.py  test_installation_status.py  test_mcp_admin_box.py  (+65 more)
tests/integration/: test_auto_setup.py  test_batch_operations.py  test_cli_functionality.py  test_cli_init_sqlite.py  test_cli_setup_switch.py  test_compact_layout.py  test_compatibility_detection.py  test_complete_uninstall.py  test_config_hierarchy.py  test_config_management.py  test_container_renaming.py  test_content_filling_by_type.py  test_crawl_flow.py  test_crawl_progress.py  test_crawling_project_workflow.py  test_create_wizard.py  test_critical_prompts.py  test_cross_platform.py  test_cross_platform_compat.py  test_data_project_workflow.py  test_debug_flag.py  (+69 more)
validation/: IMPLEMENTATION_SUMMARY.md  README.md  master-validation-result.json  run-all-scenarios.sh  scenario-1-fresh-install.sh  scenario-2-critical-decisions.sh  scenario-3-existing-upgrade.sh  scenario-4-system-requirements.sh  scenario-5-service-failure.sh  scenario-6-uv-tool-management.sh  scenario-7-cross-platform.sh  validation-summary.md
(+388 files in other folders)
