[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docbro"
version = "0.2.4"
description = "Documentation crawler and search tool with RAG capabilities and MCP server integration"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "DocBro Contributors"}
]
keywords = ["documentation", "crawler", "rag", "search", "mcp", "uvx", "uv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "click>=8.1.0",
    "rich>=14.1.0",
    "qdrant-client>=1.7.0",
    "fastapi>=0.117.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.13.0",
    "platformdirs>=3.0.0",
    "packaging>=23.0",
    "docker>=6.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
    "sqlite-vec>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.14.0",
    "pytest-env>=1.1.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=25.9.0",
    "ruff>=0.13.0",
    "mypy>=1.18.0",
    "types-beautifulsoup4>=4.12.0",
    "freezegun>=1.2.0",
]

[project.scripts]
docbro = "src.cli.main:main"

[project.entry-points."uv.tool"]
docbro = "src.cli.main:main"


[project.urls]
Homepage = "https://github.com/yourusername/docbro"
Repository = "https://github.com/yourusername/docbro"
Documentation = "https://github.com/yourusername/docbro/docs"
Issues = "https://github.com/yourusername/docbro/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src/lib/*"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 300
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "contract: marks tests as contract tests",
    "unit: marks tests as unit tests",
    "installation: marks tests that test UV installation functionality",
    "async_test: marks tests that require async functionality",
    "service_dependent: marks tests that depend on external services",
    "docker_required: marks tests that require Docker to be running",
    "uv_required: marks tests that require UV to be installed",
    "performance: marks tests that validate performance requirements",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "DOCBRO_TEST_MODE = true",
    "DOCBRO_LOG_LEVEL = DEBUG",
    "DOCBRO_DATABASE_PATH = :memory:",
    "DOCBRO_QDRANT_URL = http://localhost:6333",
    "DOCBRO_OLLAMA_URL = http://localhost:11434",
    "DOCBRO_EMBEDDING_MODEL = mxbai-embed-large",
    "UV_CACHE_DIR = /tmp/uv-test-cache",
]